test/spec_vectors/return_call_indirect/fail/module_27.wat
(module (table 0 funcref) (func $unbound-type (return_call_indirect (type 1) (i32.const 0))))